chore: ported to 1.21.1